--- a/templates/include/buyers/buyer_account_list_recent_auctions.html
+++ b/templates/include/buyers/buyer_account_list_recent_auctions.html
@@ -23,10 +23,10 @@
                         <p class="nav-p active" >{{prices_info.auction.title}}</p>
                         </li>
                         <li class="nav-item">
-                        <p class="nav-p active" >{{prices_infoauction.id}}</p>
+                        <p class="nav-p active" >{{prices_info.auction.id}}</p>
                         </li>
                         <li class="nav-item">
-                        <p class="nav-p active" >{{prices_infoauction.start_auction}}</p>
+                        <p class="nav-p active" >{{prices_info.auction.start_auction}}</p>
                         </li>
                     </ul>
                 </th>
