--- a/templates/report.html
+++ b/templates/report.html
@@ -21,10 +21,7 @@ welcome
 
 <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
-      <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="false">Home</a>
-    </li>
-    <li class="nav-item" role="presentation">
-      <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true">Items</a>
+      <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="false">Items</a>
     </li>
     <li class="nav-item" role="presentation">
       <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Buyers
@@ -40,29 +37,13 @@ welcome
     <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
 
         
-        <div class="mb-3 mt-3">
-            <div class=" col-md-6">
-                <form id="change_form" class="form-group" method="POST"  enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {{form.username.label}}
-                    {{form.username}}
-                    {{form.email.label}}
-                    {{form.email}}
-                    <button form="change_form" type="submit" class="btn btn-primary mt-4" >Save</button>
-                </form>
-                <a href="{% url 'password_change' %}">Change your password </a>
-            </div>
-        </div>
-
-
-    </div>
-    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-
-            {% include 'include/adminreports/adminreports_items.html' %}
+      {% include 'include/adminreports/adminreports_items.html' %}
 
         
 
+
     </div>
+
     <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
 
         
